# NERA-Documentation

./: .gitignore  README.md  config.py  pyproject.toml
.github/workflows/: docs.yml
archive/milestone-1/: config  data_clearer.py  data_loader.py  minecraft_interface.py  neat_run.py  winner.pkl
archive/milestone-3/: config  data_clearer.py  data_loader.py  minecraft_interface.py  neat_run.py
archive/toy-neat/: config
basic-mc-neat/: Brief overview.txt  config  input_formatter.py  output_formatter.py  toy-neat.py
data/Contractor_Index_Files/: 6xx_tree_chop.json
docs/: CSCI4970-MC-GamePlayingBot.html  index.html  nera.html  search.js
docs/CSCI4970-MC-GamePlayingBot/: config.html  nera.html
docs/nera/: data_initialization.html  minecraft_interface.html  model_generation.html  utils.html
milestone-1/: config  data_clearer.py  data_loader.py  minecraft_interface.py  neat_run.py  winner.pkl
nera/: __init__.py  autoencoder.h5  minecraft_interface.py  testmain.py
nera/data_initialization/: __init__.py  clear_training_data.py  download_data_files.py  label_processor.py  parse_urls_from_json.py  prep_input_output_driver.py  process_jsonl_data.py  process_options_data.py  process_video_frames.py  video_processor.py
nera/model_generation/: NEAT_Output_18-Apr-2024.txt  __init__.py  config  neat_run.py  winner.pkl
nera/utils/: output_helpers.py
snake/: config.py  main.py  neat_config  snake.py  visualize.py
src/: testmain.py
toy-neat/: toy-neat.py
utils/: download_data_files.py  parse_urls_from_json.py  process_video_frames.py
(+34 files in other folders)
