[build-system]
requires = [
    "hatchling"
    ]
build-backend = "hatchling.build"

[project]
name = "nera"
version = "0.0.1"
dependencies = [
    "numpy",
    "opencv-python",
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage"
]

[tool.coverage.run]
data_file = "tests/coverage/.coverage"

[tool.pytest.ini_options]
#addopts = "--cov=nera --cov-report=term --cov-report=xml:tests/coverage/coverage.xml --cov-report=html:tests/coverage/html"
addopts = "--cov=nera --cov-report=xml:tests/coverage/coverage.xml --cov-report=html:tests/coverage/html"
testpaths = [
    "tests/"
]
